<resources>
    <string name="app_name">Search Bubble</string>

    <string name="hello_world">Hello world!</string>
    <string name="hello_long">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="title_activity_settings">Settings</string>

    // Strings Related to FloatingBubbleService
    <string name="tx_search">Search</string>

    // Strings Related to ClipboardService
    <string name="tx_tap_to_show_bubble">Tap to show Bubble</string>

    // Strings Related to MainActivity
    <string name="tx_filter">Filter</string>
    <string name="tx_undo_c">UNDO</string>
    <string name="tx_clip_deleted">Clip deleted</string>
    <string name="tx_thank_you">Thank You</string>
    <string name="tx_life_is_easy_c">LIFE IS EASY</string>
    <string name="tx_error">Error</string>
    <string name="tx_try_later_c">TRY LATER</string>

    // Strings Related to TutorialActivity
    <string name="tx_slide_title_1">Autosave Clipboard data</string>
    <string name="tx_slide_description_1">Autosave Clipboard data like text and links</string>

    <string name="tx_slide_title_2">Instant Access</string>
    <string name="tx_slide_description_2">Access Search Bubble from anywhere on your phone</string>

    <string name="tx_slide_title_3">Direct Searching</string>
    <string name="tx_slide_description_3">Search directly from Search Bubble with your chosen Search provider</string>

    <string name="tx_slide_title_4">Search with A Single Click</string>
    <string name="tx_slide_description_4">Search using your Clipboard history with a Single Click</string>

    <string name="tx_slide_title_5">Popup Bubbles</string>
    <string name="tx_slide_description_5">Instantly Search, Translate, Sms, Call, Locate and Share the currently copied or other Clipboard items</string>

    // Strings Related to ClipDialogFragment
    <string name="tx_newclip">New Clip</string>
    <string name="tx_editclip">Edit Clip</string>
    <string name="tx_cancel_c">CANCEL</string>
    <string name="tx_save_c">SAVE</string>

    // Strings Related to ChangeLogFragment
    <string name="tx_changelog">Change Log</string>
    <string name="tx_ok_c">OK</string>

    // Strings Related to ClearClipHistoryDialogFragment
    <string name="tx_clear_clip_history">Clear Clip History</string>
    <string name="tx_clear_clip_history_conf">All Clips will be deleted. Proceed?</string>
    <string name="tx_yes_c">YES</string>

    // Strings Related to RateDialogFragment
    <string name="tx_life_is_easy">Life is easy with Search Bubble</string>
    <string name="tx_rate_5">Love using Search Bubble? Kindly leave a 5 star review. </string>
    <string name="tx_i_love_it_c">I LOVE IT</string>
    <string name="tx_later_c">LATER</string>

    // Strings Related to DonateDialogFragment
    <string name="tx_kindness_brings_happiness">Kindness brings happiness</string>
    <string name="tx_donate_and_help">Kindly donate and help</string>

    <string name="tx_donate_milk">Donate Milk</string>
    <string name="tx_donate_watermelon">Donate WaterMelon</string>
    <string name="tx_donate_pizza">Donate Pizza</string>
    <string name="tx_donate_sushi">Donate Sushi</string>
    <string name="tx_donate_fryingpan">Donate Frying Pan</string>

    // Strings Related to LibrariesUsedDialogFragment
    <string name="tx_libraries_used">Libraries Used</string>
    <string name="tx_libraries_used_desc">Search bubble makes use of the following open source libraries %1$s</string>
    <string name="tx_libraries_used_urls" translatable="false"><![CDATA[
        <a href="https://realm.io/">Realm</a>,
        <a href="http://google.github.io/dagger/">Dagger 2</a>,
        <a href="http://jakewharton.github.io/butterknife/">Butter Knife</a>,
        <a href="https://github.com/PaoloRotolo/AppIntro">AppIntro</a>,
        <a href="https://github.com/gabrielemariotti/changeloglib">ChangeLog Library</a>,
        <a href="https://get.fabric.io/crashlytics">Crashlytic</a>,
        <a href="https://facebook.github.io/rebound/">Rebound</a>,
        <a href="https://github.com/square/leakcanary">LeakCanary</a>,
        <a href="http://developer.android.com/tools/support-library/index.html">Android Support Library</a>
    ]]></string>
    <string name="tx_cool_c">COOL</string>

    <string name="action_donate">Donate</string>
    <string name="action_rate">Rate</string>
    <string name="action_settings">Settings</string>

    <string name="pref_general_title_c">GENERAL</string>
    <string name="pref_bubble_active_title">Bubble Active</string>
    <string name="pref_bubble_active_summary">Listen to Clipboard Data</string>
    <string name="pref_default_search_title">Default Search provider</string>
    <string name="pref_auto_start_title">Auto Start</string>
    <string name="pref_auto_start_summary">Launch on system startup</string>
    <string name="pref_auto_launch_bubble_title">Auto Launch bubble</string>
    <string name="pref_auto_launch_bubble_summary">Launch bubble automatically when app opens</string>
    <string name="pref_auto_close_title">Auto Close after search</string>
    <string name="pref_bubble_size_title">Bubble Size</string>
    <string name="pref_bubble_transparency_title">Bubble Transparency</string>
    <string name="pref_popup_bubbles_title">Popup Bubbles</string>
    <string name="pref_popup_bubbles_summary">Little bubbles on clipboard copy</string>

    <string name="pref_clipboard_title_c">CLIPBOARD</string>
    <string name="pref_pin_to_notification_title">Pin to Notification bar</string>
    <string name="pref_store_searches_title">Store searches in ClipHistory</string>
    <string name="pref_clear_cliphistory_title">Clear ClipHistory</string>
    <string name="pref_excluded_app_list_title">Excluded App List</string>

    <string name="pref_about_title_c">ABOUT</string>
    <string name="pref_send_feedback_title">Send Feedback</string>
    <string name="pref_send_feedback_desc_summary">Send anonymous feedback to developer</string>
    <string name="pref_view_tutorial_title">View Tutorial</string>
    <string name="pref_leave_a_5_star_review">Leave a 5 star review</string>
    <string name="pref_open_source_title">Open Source</string>
    <string name="pref_libraries_used">Libraries Used</string>
    <string name="pref_change_log_title">Change Log</string>


    <string-array name="pref_default_search_titles_array">
        <item>Google</item>
        <item>Baidu</item>
        <item>Yahoo</item>
        <item>DuckDuckGo</item>
        <item>Bing</item>
        <item>Ask</item>
        <item>Yandex</item>
        <item>WolframAlpha</item>
    </string-array>
    <string-array name="pref_default_search_values_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>



    <string-array name="pref_bubble_size_titles_array">
        <item>Bird</item>
        <item>Dog</item>
        <item>Elephant</item>
    </string-array>
    <string-array name="pref_bubble_size_values_array">
        <item>15</item>
        <item>30</item>
        <item>60</item>
    </string-array>

    <string-array name="pref_bubble_transparency_titles_array">
        <item>0%</item>
        <item>20%</item>
        <item>40%</item>
        <item>60%</item>
        <item>80%</item>
    </string-array>
    <string-array name="pref_bubble_transparency_values_array">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
    </string-array>

    <string-array name="pref_popup_bubbles_titles_array">
        <item>Search</item>
        <item>Translate</item>
        <item>Sms</item>
        <item>Call</item>
        <item>Locate</item>
        <item>Share</item>
        <item>Launch Bubble</item>
    </string-array>
    <string-array name="pref_popup_bubbles_values_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>

    <!--<string-array name="empty_array"/>-->
</resources>